--- a/research.ipynb
+++ b/research.ipynb
@@ -23,6 +23,18 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !pip install plotly matplotlib pandas requests huobi-client\n",
+    "# !pip list\n",
+    "# !git clone https://github.com/HuobiRDCenter/huobi_Python\n",
+    "# !cd huobi_Python && python setup.py install"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
