--- a/research.ipynb
+++ b/research.ipynb
@@ -53,11 +53,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "symbol_list = get_symbol_list()\n",
     "sb = symbol_list[random.randint(0, len(symbol_list))]\n",
     "for sb in symbol_list:\n",
-    "    a=get_price(sb, \"4hour\", 2000)\n",
+    "    a=get_price(sb, \"30min\", 2000)\n",
     "    a=get_rate(a, \"close\")\n",
     "    a[\"cr+1\"] = (a[\"close\"].shift(-1) - a[\"close\"]) / a[\"close\"]\n",
     "    a[\"cr+2\"] = (a[\"close\"].shift(-2) - a[\"close\"]) / a[\"close\"]\n",
@@ -66,10 +65,11 @@
     "    standard = a.describe()[\"vol_mean3_cr\"][\"75%\"]\n",
     "    c=a.loc[(a[\"vol_mean3_cr\"]>standard) & (a[\"close_rate\"]>0)]\n",
     "    try:\n",
-    "        if datetime.datetime.strptime(\"2021-04-22 12:00:00\", \"%Y-%m-%d %H:%M:%S\") == c.index[-1]:\n",
+    "        if datetime.datetime.strptime(\"2021-04-22 17:00:00\", \"%Y-%m-%d %H:%M:%S\") == c.index[-1]:\n",
     "            print(sb)\n",
-    "    except :\n",
-    "        continue\n"
+    "    except:\n",
+    "        continue\n",
+    "print(\"done\")"
    ]
   },
   {
@@ -78,24 +78,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "aa=get_price(sb, \"15min\", 2000)\n",
-    "aa=get_mean_line(aa)\n",
-    "bb = aa[c.index[-1]-datetime.timedelta(hours=4) : c.index[-1]]\n",
-    "draw_candle(bb)\n",
-    "cc = aa[c.index[-1]:c.index[-1]+datetime.timedelta(hours=4)]\n",
-    "draw_candle(cc)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "symbol_list = get_symbol_list()\n",
-    "sb = symbol_list[random.randint(0, len(symbol_list))]\n",
-    "# sb=\"jstusdt\"\n",
-    "a=get_price(sb, \"4hour\", 2000)\n",
+    "# symbol_list = get_symbol_list()\n",
+    "# sb = symbol_list[random.randint(0, len(symbol_list))]\n",
+    "sb = \"mtausdt\"\n",
+    "a=get_price(sb, \"30min\", 2000)\n",
     "print(sb)\n",
     "a=get_rate(a, \"close\")\n",
     "a[\"cr+1\"] = (a[\"close\"].shift(-1) - a[\"close\"]) / a[\"close\"]\n",
@@ -104,9 +90,15 @@
     "a=custom_data_analyze_func(a, rolling_days=3)\n",
     "standard = a.describe()[\"vol_mean3_cr\"][\"75%\"]\n",
     "c=a.loc[(a[\"vol_mean3_cr\"]>standard) & (a[\"close_rate\"]>0)]\n",
-    "print(c.index[-1])\n",
+    "print(c.index[-1], c.iloc[-1][\"close\"])\n",
     "display(c[[\"cr+1\",\"cr+2\",\"close_rate\"]].describe())\n",
-    "# c[[\"cr+1\"]].plot(kind=\"hist\")"
+    "# c[[\"cr+1\"]].plot(kind=\"hist\")\n",
+    "aa=get_price(sb, \"1min\", 2000)\n",
+    "aa=get_mean_line(aa)\n",
+    "bb = aa[c.index[-1]-datetime.timedelta(hours=0.5) : c.index[-1]]\n",
+    "draw_candle(bb)\n",
+    "cc = aa[c.index[-1]:c.index[-1]+datetime.timedelta(hours=0.5)]\n",
+    "draw_candle(cc)"
    ]
   },
   {
