--- a/research.ipynb
+++ b/research.ipynb
@@ -106,7 +106,53 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from utils import *\n",
+    "from plotly import graph_objects as go\n",
+    "from IPython.display import clear_output\n",
+    "\n",
+    "symbol = \"dogeusdt\"\n",
+    "leverage = 30\n",
+    "direction = \"buy\"\n",
+    "init_win_rates = 20\n",
+    "force_close = -20\n",
+    "change_rate = 10\n",
+    "\n",
+    "plot_list = []\n",
+    "\n",
+    "#TODO 获取当前持仓信息\n",
+    "open_point=get_price(symbol, \"1min\", 1).iloc[-1][\"close\"]\n",
+    "pr = 0\n",
+    "\n",
+    "while True:\n",
+    "    current_point = get_price(symbol, \"1min\", 1).iloc[-1][\"close\"]\n",
+    "    if direction == \"buy\":\n",
+    "        rates = (current_point - open_point)/open_point * 100 * leverage\n",
+    "    elif direction == \"sell\":\n",
+    "        rates = (open_point - current_point)/open_point * 100 * leverage\n",
+    "    else:\n",
+    "        raise Exception(\"wha???????\")\n",
+    "    if pr != rates:\n",
+    "        clear_output(wait=True)\n",
+    "        print(\"current rate = {:.4f}%\".format(rates))\n",
+    "        plot_list.append(rates)\n",
+    "    pr = rates\n",
+    "    if rates < force_close:\n",
+    "        if rates < 0:\n",
+    "            print(\"I quite QAQ\")\n",
+    "        else:\n",
+    "            print(f\"I quite XD, with {rates}%\")\n",
+    "        break\n",
+    "    \n",
+    "    if rates > init_win_rates:\n",
+    "        force_close = init_win_rates - change_rate\n",
+    "        init_win_rates += change_rate\n",
+    "\n",
+    "fig = go.Figure(\n",
+    "    go.Scatter(y=plot_list)\n",
+    ")\n",
+    "fig.show()"
+   ]
   }
  ]
 }
