--- a/research.ipynb
+++ b/research.ipynb
@@ -1,25 +1,4 @@
 {
- "metadata": {
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.8"
-  },
-  "orig_nbformat": 2,
-  "kernelspec": {
-   "name": "python388jvsc74a57bd01b2b0f409ecbe55cbd77d76ab8b7a6044218da5db3e6504d0f400a2529d06cea",
-   "display_name": "Python 3.8.8 64-bit ('coin': conda)"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 2,
  "cells": [
   {
    "cell_type": "code",
@@ -134,6 +113,10 @@
     "        raise Exception(\"wha???????\")\n",
     "    if pr != rates:\n",
     "        clear_output(wait=True)\n",
+    "        if max_rate < rates:\n",
+    "            max_rate = rates\n",
+    "        print(f\"The force close line: {force_close}\\nThe win rates: {init_win_rates}\")\n",
+    "        print(\"The max rate: {:.4f}%\".format(max_rate))\n",
     "        print(\"current rate = {:.4f}%\".format(rates))\n",
     "        plot_list.append(rates)\n",
     "    pr = rates\n",
@@ -154,5 +137,26 @@
     "fig.show()"
    ]
   }
- ]
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.3"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
 }
