--- a/research.ipynb
+++ b/research.ipynb
@@ -86,6 +86,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import datetime\n",
     "from utils import *\n",
     "from plotly import graph_objects as go\n",
     "from IPython.display import clear_output\n",
@@ -96,6 +97,7 @@
     "init_win_rates = 20\n",
     "force_close = -20\n",
     "change_rate = 10\n",
+    "stime = datetime.datetime.now()\n",
     "\n",
     "plot_list = []\n",
     "\n",
@@ -115,6 +117,8 @@
     "        clear_output(wait=True)\n",
     "        if max_rate < rates:\n",
     "            max_rate = rates\n",
+    "        duration = datetime.datetime.now()-stime\n",
+    "        print(f\"It is {duration} later\")\n",
     "        print(f\"The force close line: {force_close}\\nThe win rates: {init_win_rates}\")\n",
     "        print(\"The max rate: {:.4f}%\".format(max_rate))\n",
     "        print(\"current rate = {:.4f}%\".format(rates))\n",
