--- a/research.ipynb
+++ b/research.ipynb
@@ -91,26 +91,31 @@
     "from plotly import graph_objects as go\n",
     "from IPython.display import clear_output\n",
     "\n",
-    "symbol = \"dogeusdt\"\n",
-    "leverage = 30\n",
-    "direction = \"buy\"\n",
-    "init_win_rates = 20\n",
-    "force_close = -20\n",
-    "change_rate = 10\n",
+    "pr = 0\n",
+    "max_rate = 0\n",
     "stime = datetime.datetime.now()\n",
     "\n",
     "plot_list = []\n",
     "\n",
-    "#TODO 获取当前持仓信息\n",
+    "#TODO 从服务器获取当前持仓信息\n",
+    "symbol = \"dogeusdt\"\n",
     "open_point=get_price(symbol, \"1min\", 1).iloc[-1][\"close\"]\n",
-    "pr = 0\n",
+    "leverage = 30\n",
+    "direction = \"s\"\n",
+    "init_win_rates = 20\n",
+    "force_close = -20\n",
+    "change_rate = 10\n",
     "\n",
     "while True:\n",
-    "    current_point = get_price(symbol, \"1min\", 1).iloc[-1][\"close\"]\n",
-    "    if direction == \"buy\":\n",
-    "        rates = (current_point - open_point)/open_point * 100 * leverage\n",
-    "    elif direction == \"sell\":\n",
-    "        rates = (open_point - current_point)/open_point * 100 * leverage\n",
+    "    try:\n",
+    "        current_point = get_price(symbol, \"1min\", 1).iloc[-1][\"close\"]\n",
+    "    except Exception:\n",
+    "        print(\"!!!!!!\")\n",
+    "        continue\n",
+    "    if direction in \"buy\":\n",
+    "        rates = (current_point - open_point) / open_point * 100 * leverage\n",
+    "    elif direction in \"sell\":\n",
+    "        rates = (open_point - current_point) / open_point * 100 * leverage\n",
     "    else:\n",
     "        raise Exception(\"wha???????\")\n",
     "    if pr != rates:\n",
@@ -119,7 +124,7 @@
     "            max_rate = rates\n",
     "        duration = datetime.datetime.now()-stime\n",
     "        print(f\"It is {duration} later\")\n",
-    "        print(f\"The force close line: {force_close}\\nThe win rates: {init_win_rates}\")\n",
+    "        print(f\"U {direction} {symbol} with {open_point}\\nThe force close line: {force_close}\\nThe win rates: {init_win_rates}\")\n",
     "        print(\"The max rate: {:.4f}%\".format(max_rate))\n",
     "        print(\"current rate = {:.4f}%\".format(rates))\n",
     "        plot_list.append(rates)\n",
@@ -140,13 +145,30 @@
     ")\n",
     "fig.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from huobi.client.account import AccountClient\n",
+    "from huobi.client.trade import TradeClient\n",
+    "from huobi.constant import OrderType\n",
+    "print(OrderType.BUY_MARKET)\n",
+    "\n",
+    "\n",
+    "ids =[account.id for account in ac.get_accounts()]\n",
+    "\n",
+    "blc = ac.get_balance(ids[0])\n",
+    "[b.balance for b in ac.get_balance(ids[1])]"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python388jvsc74a57bd01b2b0f409ecbe55cbd77d76ab8b7a6044218da5db3e6504d0f400a2529d06cea",
+   "display_name": "Python 3.8.8 64-bit ('coin': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -158,7 +180,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
