--- a/research.ipynb
+++ b/research.ipynb
@@ -86,6 +86,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "wallet = 50 # USDT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import datetime\n",
     "from utils import *\n",
     "from plotly import graph_objects as go\n",
@@ -101,7 +110,7 @@
     "symbol = \"dogeusdt\"\n",
     "open_point=get_price(symbol, \"1min\", 1).iloc[-1][\"close\"]\n",
     "leverage = 30\n",
-    "direction = \"s\"\n",
+    "direction = \"b\"\n",
     "init_win_rates = 20\n",
     "force_close = -20\n",
     "change_rate = 10\n",
@@ -124,22 +133,29 @@
     "            max_rate = rates\n",
     "        duration = datetime.datetime.now()-stime\n",
     "        print(f\"It is {duration} later\")\n",
-    "        print(f\"U {direction} {symbol} with {open_point}\\nThe force close line: {force_close}\\nThe win rates: {init_win_rates}\")\n",
-    "        print(\"The max rate: {:.4f}%\".format(max_rate))\n",
     "        print(\"current rate = {:.4f}%\".format(rates))\n",
+    "        print(\"================================\")\n",
+    "        print(\"The max rate: {:.4f}%\".format(max_rate))\n",
+    "        print(f\"U {direction} {symbol} with {open_point}\\nThe force close line: {force_close}\\nThe win rates: {init_win_rates}\")\n",
     "        plot_list.append(rates)\n",
     "    pr = rates\n",
     "    if rates < force_close:\n",
     "        if rates < 0:\n",
     "            print(\"I quite QAQ\")\n",
+    "            wallet = wallet * (100+rates)/100\n",
     "        else:\n",
     "            print(f\"I quite XD, with {rates}%\")\n",
+    "            wallet = wallet * (100+rates)/100\n",
     "        break\n",
-    "    \n",
-    "    if rates > init_win_rates:\n",
+    "    if rates > 2* init_win_rates:\n",
+    "        print(f\"I quite XD, with {rates}%\")\n",
+    "        wallet = wallet * (100+rates)/100\n",
+    "    elif rates > init_win_rates*0.9:\n",
     "        force_close = init_win_rates - change_rate\n",
     "        init_win_rates += change_rate\n",
     "\n",
+    "print(f\"{wallet} usdt left\")\n",
+    "        \n",
     "fig = go.Figure(\n",
     "    go.Scatter(y=plot_list)\n",
     ")\n",
