UPLOAD swap util

--- a/research.ipynb
+++ b/research.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,6 +121,7 @@
     "    except Exception:\n",
     "        print(\"!!!!!!\")\n",
     "        continue\n",
+    "    # 计算当前订单涨跌幅\n",
     "    if direction in \"buy\":\n",
     "        rates = (current_point - open_point) / open_point * 100 * leverage\n",
     "    elif direction in \"sell\":\n",
@@ -164,21 +165,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[21881668, 22933194]\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 4
+    }
+   ],
    "source": [
     "from huobi.client.account import AccountClient\n",
     "from huobi.client.trade import TradeClient\n",
     "from huobi.constant import OrderType\n",
-    "print(OrderType.BUY_MARKET)\n",
     "\n",
-    "\n",
-    "ids =[account.id for account in ac.get_accounts()]\n",
-    "\n",
-    "blc = ac.get_balance(ids[0])\n",
-    "[b.balance for b in ac.get_balance(ids[1])]"
+    "ac = AccountClient(api_key=\"937448cb-gr4edfki8l-50d83020-7143e\", secret_key=\"2cdd66df-7bc32cc4-6b9e778b-034da\")\n",
+    "ids = [acc.id for acc in ac.get_accounts()]\n",
+    "print(ids)\n",
+    "tc = TradeClient(api_key=\"937448cb-gr4edfki8l-50d83020-7143e\", secret_key=\"2cdd66df-7bc32cc4-6b9e778b-034da\")\n",
+    "tc.get_open_orders(\"trxusdt\", 22933194)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
